content page overflowing x from page solved

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,5 +1,5 @@
 /* main content on screen */
-.content {
+.main-content {
   padding: 50px 20px;
   width: 100%;
   height: 100vh;
